syntax = "proto3";
package server_api_params;
option go_package = "github.com/qingw1230/study-im-server/pkg/proto/public";

message CommonResp {
  string status = 1;
  int32 code = 2;
  string info = 3;
}

message UserInfo {
  string token = 1;
  bool admin = 2;
  string userId = 3;
  string nickName = 4;
  string personalSignature = 5;
  int32 joinType = 6;
  int32 sex = 7;
  string areaName = 8;
  string areaCode = 9;
}

message PublicUserInfo {
  string userId = 1;
  string nickName = 2;
  string personalSignature = 3;
  int32 sex = 4;
  string areaName = 5;
  string areaCode = 6;
  bool isFriend = 7;
}

message FriendInfo {
  string ownerUserId = 1;
  string remark = 2;
  uint32 createTime = 3;
  PublicUserInfo friendInfo = 4;
  int32 addSource = 5;
  string opUserId = 6;
  string ex = 7;
}
